New project added, website translated to English, Updated wireframes at Santander Mobile and minor improvements on App.css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>Sou um UX designer - Henrique Freitas</title>
+        <title>I am a UX designer - Henrique Freitas</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -25,10 +25,10 @@
 
                     <div class="collapse navbar-collapse" id="main-nav">
                         <ul class="landing-nav nav navbar-nav" role="navigation">
-                            <li><a href="#about">Sobre mim</a></li>
-                            <li><a href="#skills">Conhecimentos</a></li>
-                            <li><a href="#testimonials">Depoimentos</a></li>
-                            <li><a href="#hire">Contratar</a></li>
+                            <li><a href="#about">About me</a></li>
+                            <li><a href="#skills">Knowledge</a></li>
+                            <li><a href="#testimonials">Testimonials</a></li>
+                            <li><a href="#hire">Hire</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right" role="navigation">
                             <li><a href="portfolio.html">Portfolio</a></li>
@@ -38,41 +38,42 @@
             </nav>
             <div id="hero" role="banner">
                 <hgroup>
-                    <h1>Oi, eu sou o Henrique :)</h1>
-                    <h2>E eu faço com que pessoas sintam paixão por usar produtos e serviços digitais</h2>
+                    <h1>Hi, I'm Henrique :)</h1>
+                    <h2>And I make people feel love for using digital products and services</h2>
                 </hgroup>
-                <a href="portfolio.html" id="portfolio-hero-link">Veja meu portfolio</a>
-                <a href="#hire" id="cta-hire-link">Me contrate</a>
+                <a href="portfolio.html" id="portfolio-hero-link">Check my portfolio</a>
+                <a href="#hire" id="cta-hire-link">Hire me</a>
             </div>
         </header>
         <main role="main">
             <section id="about" class="section container">
                 <header>
                     <hgroup>
-                        <h1>Sobre mim</h1>
-                        <h2>Sou um apaixonado por design, por ajudar pessoas e por tecnologia. Ajudo pessoas a usarem a tecnologia a seu favor de diferentes formas há seis anos.</h2>
+                        <h1>About me</h1>
+                        <h2>I'm a UX/UI Designer, front end developer and programming languages explorer.</h2>
                     </hgroup>
                 </header>
                 <div class="about-picture">
                     <img src="assets/images/profile-photo.jpg" alt="Sou o Henrique e sou um UX designer." class="img-responsive">
                 </div>
-                <p>Nasci e cresci em Taboão da Serra, município da região metropolitana de São Paulo. Tenho 24 anos, estudo UX / UI design e sou formado em Sistemas de Informação pela FIAP. Comecei a me aventurar no desenvolvimento de sistemas aos 17, programando sistemas para a web em atividades acadêmicas com tecnologias front e back end. Com 18 anos comecei a trabalhar na fábrica de software Addbiz como web designer. Cerca de um ano depois eu já estava trabalhando como desenvolvedor full stack próximo a equipe de marketing de um grande e-commerce de produtos de supermercado. Em 2013 eu comecei a trabalhar na multinacional BASF como estagiário da equipe de projetos SAP e em 2014 entrei para a Nestlé como Analista de Infraestrutura. Em 2015 passei a atuar como Gerente de Projetos e coordenador de sistemas em nuvem, posição que assumi até deixar o mercado, em dezembro de 2015.</p>
-                <p>Ao longo de minha trajetória profissional participei de projetos envolvendo criação e design que me fizeram repensar minha carreira. Desde o início de 2016 eu venho estudando user experience para startups. Minha experiência com design vem de quando fui desenvolvedor. Por ser uma empresa pequena, acabei trabalhando também com criação de interfaces e layouts para a web. Sonho em juntar o que aprendi de UI/UX com o futuro da internet das coisas e fazer UX das coisas.</p>
-                <p>A evolução de minha carreira está pautada em três premissas, que aprendi ao longo de meus estudos:</p>
-                <blockquote>
+                <p>After more than six years of career I've done many different things, all with the same objective: help people to achieve their business goals by understanding and using technology. I've worked as a graphic designer for web and printed media, full stack developer, systems analyst, infrastructure analyst and project manager. Although very different, each of my experiences helps me to be a better UX professional and for that I face my work as a group of everything I have ever done in my professional life. My bachelor in Information Technology by FIAP also adds many points to that.</p>
+                <p>I've worked with UX on freelance projects and specialized myself in design by Gama Academy. Nowadays I work as a UX Designer at Conversion Chef, a consulting agency whose goal is to spread the Conversion Rate Optimization practices in Brazil.</p>
+                <p>I love Internet of Things and EdTechs. My dream is to build fantastic experiences that really contribute to help individuals and groups to have a better education.</p>
+                <p>My career and studies are guided by the following premises:</p>
+                <blockquote class="alert alert-info">
                     <ul>
-                        <li>IoT não é ficção e UX terá um papel de suma importância neste campo.</li>
-                        <li>Algoritmos dominarão o mundo e sustentarão cada vez mais modelos de negócio.</li>
-                        <li>Saber codar é meio caminho andado, o restante é design patterns e programação para o próximo.</li>
+                        <li>IoT isn't fiction and UX will have an important role in this field.</li>
+                        <li>Algorithms will rule the world and will be the foundation of each time more business models.</li>
+                        <li>Know how to code is half way done, the rest are design patterns and developing for the next.</li>
                     </ul>
                 </blockquote>
-                <a href="downloads/henrique-freitas-souza-resume.pdf" target="_blank">Veja meu currículo (formato PDF)</a>
+                <a href="downloads/henrique-freitas-souza-resume.pdf" target="_blank">Check out my portfolio in PDF</a>
             </section>
             <section id="skills" class="section container">
                 <header>
                     <hgroup>
-                        <h1>Conhecimentos</h1>
-                        <h2>Usar ferramentas e processos de design, botar a mão em código e prototipar soluções para negócios são minhas principais habilidades.</h2>
+                        <h1>Knowledge</h1>
+                        <h2>Work with design processes and tools, put my hands on code and prototype business solutions are my specialties.</h2>
                     </hgroup>
                 </header>
                 <div class="row">
@@ -117,53 +118,53 @@
             <section id="testimonials" class="section container">
                 <header>
                     <hgroup>
-                        <h1>Depoimentos</h1>
-                        <h2>Veja o que já disseram do meu trabalho e o que você pode esperar ao me contratar</h2>
+                        <h1>Testimonials</h1>
+                        <h2>The following quotes are some of the things that people already told about my work and things that you can expect from hiring me</h2>
                     </hgroup>
                 </header>
                 <blockquote>
-                    “O Henrique é uma dupla combinação perigosa. Ele não é apenas um designer que traduz as necessidades com maestria para atender o cliente, como também é um desenvolvedor/programador que coloca tudo em perfeita funcionalidade. Tivemos um grande desafio juntos e foi um ótimo visionário de como deixar tudo na melhor experiência que o usuário poderia ter, além de deixar a comunicação atrativa com imagens que chamam a atenção du público-alvo. Espero um dia trabalhar com ele novamente!”.
+                    "Henrique is a doubly dangerous combination. He's not only a designer who translates needs with experience to meet the client's expectations, but also a developer/programmer that puts everything in perfect functionality. We've had a big challenge together and He did a great job on how to build everything thinking on the best experience the users can have, besides making the communication very attractive with pictures that draw the attention from the target public. I hope I can work with him again!"
                     <address>- Mateus Quelhas - Strategic Marketer, focused on Digital and Product Innovation</address>
                 </blockquote>
                 <blockquote>
-                    “Henrique é um profissional com uma visão incrível e um conhecimento ímpar. Ideias surgem de muitas, todas muito coerentes, inovadoras e totalmente diferente do convencional. Suas habilidades e preocupações com design é bem clara, assim como seu conhecimento teórico sobre Design, UI e principalmente UX Design.”.
+                    "Henrique is a professional with great vision and singular knowledge. Ideas come in many, all very cohesive, innovative and totally different from conventional. His skills and worries with design are very clear, so as his technical knowledge about Design, UI and mainly UX Design".
                     <address>- Vitor Ferreira - Growth Hacker | Digital Marketing</address>
                 </blockquote>
             </section>
             <section id="hire" class="section container">
                 <header>
                     <hgroup>
-                        <h1>Contratar</h1>
-                        <h2>Vamos bater um papo, tomar um cafezinho e tirar seu projeto do papel :)</h2>
+                        <h1>Hire</h1>
+                        <h2>Let's have a chat, a coffee and make your project get out of paper :)</h2>
                     </hgroup>
                 </header>
                 <div class="contact-channel">
                     <a href="mailto:henrique@henriquefreitas.com.br">
-                        <img src="assets/images/email-icon.png" alt="Mande um e-mail para henrique@henriquefreitas.com.br" class="img-responsive">
+                        <img src="assets/images/email-icon.png" alt="Send an e-mail to henrique@henriquefreitas.com.br b| Mande um e-mail para henrique@henriquefreitas.com.br " class="img-responsive">
                         <span>henrique@henriquefreitas.com.br</span>
                     </a>
                 </div>
                 <div class="contact-channel no-hover">
-                    <img src="assets/images/phone-icon.png" alt="Mande um oi no WhatsApp em (011) 95435-5406" class="img-responsive">
-                    <span>(011) 95435-5406 (zap zap)</span>
+                    <img src="assets/images/phone-icon.png" alt="Send and Hi on my Phone at +55 011 95435-5406 | Mande um oi no WhatsApp em +55 011 95435-5406" class="img-responsive">
+                    <span>+55 011 95435-5406</span>
                 </div>
                 <div class="contact-channel">
                     <a href="https://linkedin.com/in/henriquefreitassouza" target="_blank">
-                        <img src="assets/images/linkedin-icon.png" alt="Mande um oi no LinkedIn em https://linkedin.com/in/henriquefreitassouza" class="img-responsive">
+                        <img src="assets/images/linkedin-icon.png" alt="Say hi at Linkedin in https://linkedin.com/in/henriquefreitassouza | Mande um oi no LinkedIn em https://linkedin.com/in/henriquefreitassouza" class="img-responsive">
                         <span>henriquefreitassouza</span>
                     </a>
                 </div>
                 <div class="contact-channel">
                     <a href="https://behance.net/henrique034b" target="_blank">
-                        <img src="assets/images/behance-icon.png" alt="Veja meus trabalhos com criação de interfaces e ilustrações em https://behance.net/henrique034b" class="img-responsive"><span>henrique034b</span>
+                        <img src="assets/images/behance-icon.png" alt="Check out my work with UI and illustrations at https://behance.net/henrique034b | Veja meus trabalhos com criação de interfaces e ilustrações em https://behance.net/henrique034b" class="img-responsive"><span>henrique034b</span>
                     </a>
                 </div>
             </section>
             <footer id="site-footer" class="section">
                 <div class="container">
-                    <strong><a href="index.html" title="Voltar para o topo da página">Henrique Freitas</a></strong>
+                    <strong><a href="index.html" title="Go to the top">Henrique Freitas</a></strong>
                     <div class="footer-links">
-                        <a href="#page-header" id="go-to-the-top">Voltar ao topo</a>
+                        <a href="#page-header" id="go-to-the-top">Go to the top</a>
                     </div>
                     <div class="clearfix"></div>
                 </div>
