--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>Meus trabalhos com UX - Henrique Freitas</title>
+        <title>My work with UX Design - Henrique Freitas</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -25,10 +25,10 @@
 
                     <div class="collapse navbar-collapse" id="main-nav">
                         <ul class="nav navbar-nav" role="navigation">
-                            <li><a href="index.html#about">Sobre mim</a></li>
-                            <li><a href="index.html#skills">Conhecimentos</a></li>
-                            <li><a href="index.html#testimonials">Depoimentos</a></li>
-                            <li><a href="index.html#hire">Contratar</a></li>
+                            <li><a href="index.html#about">About me</a></li>
+                            <li><a href="index.html#skills">Knowledge</a></li>
+                            <li><a href="index.html#testimonials">Testimonials</a></li>
+                            <li><a href="index.html#hire">Hire</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right" role="navigation">
                             <li><a href="portfolio.html">Portfolio</a></li>
@@ -38,8 +38,8 @@
             </nav>
             <div id="hero" role="banner">
                 <hgroup>
-                    <h1>Meu portfolio</h1>
-                    <h2>Conheça alguns de meus trabalhos com UX e UI</h2>
+                    <h1>My portfolio</h1>
+                    <h2>Check out some of my work with UX and UI</h2>
                 </hgroup>
             </div>
         </header>
@@ -51,37 +51,54 @@
                         <li class="active"><span>Portfolio</span></li>
                     </ol>
                     <hgroup>
-                        <h1>Projetos</h1>
-                        <h2>Conheça alguns dos meus principais trabalhos, as características dos projetos e o que foi entregue em cada um.</h2>
+                        <h1>Projects</h1>
+                        <h2>Check out my main work, the characteristics of each and the final product delivered.</h2>
                     </hgroup>
                 </header>
                 <div class="row">
                     <div class="col-xs-12 col-sm-4 portfolio-item">
                         <a href="projects/personal-website.html">
-                            <img src="assets/images/product/personal_website/project-thumbnail.png" alt="Miniatura do projeto Meu Portfolio" class="img-reponsive img-thumbnail">
-                            <strong>Meu portfolio</strong>
+                            <img src="assets/images/product/personal_website/project-thumbnail.png" alt="Thumbnail of the project My Portfolio | Miniatura do projeto Meu Portfolio" class="img-reponsive img-thumbnail">
+                            <strong>My portfolio</strong>
                         </a>
+                        <span>Development of a web portfolio with UX projects</span>
                     </div>
                     <div class="col-xs-12 col-sm-4 portfolio-item">
                         <a href="projects/musicar.html">
-                            <img src="assets/images/product/musicar/project-thumbnail.png" alt="Miniatura do projeto Musicar" class="img-reponsive img-thumbnail">
+                            <img src="assets/images/product/musicar/project-thumbnail.png" alt="Thumbnail of the project Musicat | Miniatura do projeto Musicar" class="img-reponsive img-thumbnail">
                             <strong>Musicar</strong>
                         </a>
+                        <span>Mobile app to help music students and teachers to connect with each other</span>
                     </div>
                     <div class="col-xs-12 col-sm-4 portfolio-item">
                         <a href="projects/santander.html">
-                            <img src="assets/images/product/santander_redesign/project-thumbnail.png" alt="Miniatura do projeto Redesign do app Santander" class="img-reponsive img-thumbnail">
-                            <strong>Redesign do Santander mobile</strong>
+                            <img src="assets/images/product/santander_redesign/project-thumbnail.png" alt="Thumbnail of the project Santander Mobile | Miniatura do projeto Santander Mobile" class="img-reponsive img-thumbnail">
+                            <strong>Santander mobile</strong>
                         </a>
+                        <span>Concept of a new payment flow on the mobile app of Santander internet banking</span>
                     </div>
                 </div>
-                <a href="https://behance.net/henrique034b" target="_blank">Quer ver mais? Dá uma espiada nos meus trabalhos com design gráfico lá no Behance (e um appreciation joinha também :D)</a>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-4 portfolio-item">
+                        <a href="projects/conversion-chef.html">
+                            <img src="assets/images/product/conversion_chef/project-thumbnail.png" alt="Thumbnail of the project Conversion Chef | Miniatura do projeto Conversion Chef" class="img-reponsive img-thumbnail">
+                            <strong>Conversion Chef</strong>
+                        </a>
+                        <span>Development of a website for the CRO consulting agency Conversion Chef</span>
+                    </div>
+                </div>
+                <h3>More projects</h3>
+                <ul class="more-projects">
+                    <li><strong>Graphic design: </strong><a href="https://behance.net/henrique034b" target="_blank">Behance</a></li>
+                    <li><strong>Front end: </strong><a href="https://github.com/henriquefreitassouza" target="_blank">Github</a></li>
+                    <li><strong>Code snippets: </strong><a href="https://codepen.io/henriquefreitassouza" target="_blank">Codepen</a></li>
+                </ul>
             </section>
             <footer id="site-footer" class="section">
                 <div class="container">
-                    <strong><a href="index.html" title="Voltar para a página inicial">Henrique Freitas</a></strong>
+                    <strong><a href="index.html" title="Go to the home page">Henrique Freitas</a></strong>
                     <div class="footer-links">
-                        <a href="#page-header" id="go-to-the-top">Voltar ao topo</a>
+                        <a href="#page-header" id="go-to-the-top">Go to the top</a>
                     </div>
                     <div class="clearfix"></div>
                 </div>
