--- a/projects/conversion-chef.html
+++ b/projects/conversion-chef.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>My Portfolio - My work with UX - Henrique Freitas</title>
+        <title>Conversion Chef - My work with UX - Henrique Freitas</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <link rel="icon" href="../favicon.ico" type="image/x-icon">
@@ -58,57 +58,78 @@
                     <ol class="breadcrumb">
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../portfolio.html">Portfolio</a></li>
-                        <li class="active"><span>My portfolio</span></li>
+                        <li class="active"><span>Conversion Chef</span></li>
                     </ol>
                     <hgroup>
-                        <h1>My portfolio</h1>
-                        <h2>What is it: a portfolio with UX/UI Design works.</h2>
+                        <h1>Conversion Chef</h1>
+                        <h2>What is it: A website to drive sales for the CRO consulting agency Conversion Chef.</h2>
                     </hgroup>
                 </header>
-                <p class="portfolio-item-description">My portfolio was designed to help HR managers and design leaders that need to evaluate the profile and knowledge of candidates for jobs that they need to fill. All of the site information was placed in such a way that recruiters find first my portfolio and then my personal information. This arrangement is a complement to the content at LinkedIn, channel from where most recruiters come from before arrive at the portfolio site.</p>
+                <p class="portfolio-item-description">Conversion Chef is one of the few companies in Brazil that offer consulting and training in CRO (Conversion Rate Optimization). The website is being built with a mobile first approach and the main navigation highlight the areas that represent the most common actions that users do.</p>
                 <div class="alert alert-success">
                     <strong>Achievments: </strong>
                     <ul>
-                        <li>HR and design managers can scan my profile within less time and be more productive;</li>
+                        <li>The site will be the main channel of conversion from Conversion Chef;</li>
                     </ul>
-                </div>
-                <h3>Main mockups</h3>
-                <div class="row">
-                    <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
-                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/personal_website/mockup/home.png">
-                            <div>
-                                <img src="../assets/images/product/personal_website/mockup/thumbnail/home.png" alt="My portfolio - Home | Meu portfolio - Home" class="img-responsive img-thumbnail">
-                            </div>
-                            <strong>Home page</strong>
-                        </a>
-                    </div>
                 </div>
                 <h3>Main wireframes</h3>
                 <div class="row">
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
-                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/personal_website/wireframe/home.png">
+                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/conversion_chef/wireframe/home.png">
                             <div>
-                                <img src="../assets/images/product/personal_website/wireframe/thumbnail/home.png" alt="My portfolio - Home | Meu portfolio - Home" class="img-responsive img-thumbnail">
+                                <img src="../assets/images/product/conversion_chef/wireframe/thumbnail/home.png" alt="Conversion Chef - Home" class="img-responsive img-thumbnail">
                             </div>
                             <strong>Home</strong>
                         </a>
                     </div>
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
-                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/personal_website/wireframe/portfolio.png">
+                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/conversion_chef/wireframe/servicos.png">
                             <div>
-                                <img src="../assets/images/product/personal_website/wireframe/thumbnail/portfolio.png" alt="My portfolio - Portfolio | Meu portfolio - Portfolio" class="img-responsive img-thumbnail">
+                                <img src="../assets/images/product/conversion_chef/wireframe/thumbnail/servicos.png" alt="Conversion Chef - Services | Conversion Chef - Serviços" class="img-responsive img-thumbnail">
                             </div>
-                            <strong>Portfolio</strong>
+                            <strong>Services</strong>
                         </a>
                     </div>
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
-                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/personal_website/wireframe/produto.png">
+                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/conversion_chef/wireframe/pricing.png">
                             <div>
-                                <img src="../assets/images/product/personal_website/wireframe/thumbnail/produto.png" alt="My portfolio - Product | Meu portfolio - Produto" class="img-responsive img-thumbnail">
+                                <img src="../assets/images/product/conversion_chef/wireframe/thumbnail/pricing.png" alt="Conversion Chef - Pricing" class="img-responsive img-thumbnail">
                             </div>
-                            <strong>Product</strong>
+                            <strong>Pricing</strong>
                         </a>
-                    </div>    
+                    </div>
+                    <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
+                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/conversion_chef/wireframe/contato.png">
+                            <div>
+                                <img src="../assets/images/product/conversion_chef/wireframe/thumbnail/contato.png" alt="Conversion Chef - Contact | Conversion Chef - Contato" class="img-responsive img-thumbnail">
+                            </div>
+                            <strong>Contact</strong>
+                        </a>
+                    </div>
+                    <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
+                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/conversion_chef/wireframe/sobre.png">
+                            <div>
+                                <img src="../assets/images/product/conversion_chef/wireframe/thumbnail/sobre.png" alt="Conversion Chef - About | Conversion Chef - Sobre" class="img-responsive img-thumbnail">
+                            </div>
+                            <strong>About</strong>
+                        </a>
+                    </div>
+                    <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
+                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/conversion_chef/wireframe/cases.png">
+                            <div>
+                                <img src="../assets/images/product/conversion_chef/wireframe/thumbnail/cases.png" alt="Conversion Chef - Cases | Conversion Chef - Clients" class="img-responsive img-thumbnail">
+                            </div>
+                            <strong>Clients</strong>
+                        </a>
+                    </div>
+                    <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
+                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/conversion_chef/wireframe/blog.png">
+                            <div>
+                                <img src="../assets/images/product/conversion_chef/wireframe/thumbnail/blog.png" alt="Conversion Chef - Blog" class="img-responsive img-thumbnail">
+                            </div>
+                            <strong>Blog</strong>
+                        </a>
+                    </div>
                 </div>
             </section>
             <footer id="site-footer" class="section">
@@ -116,7 +137,7 @@
                     <strong><a href="../index.html" title="Go to the home page">Henrique Freitas</a></strong>
                     <div class="footer-links">
                         <a href="../index.html#hire">Hire me</a>
-                        <a href="musicar.html">Next project &gt;&gt;</a>
+                        <a href="santander.html">Previous Project &lt;&lt;</a>
                     </div>
                     <div class="clearfix"></div>
                 </div>
