--- a/projects/musicar.html
+++ b/projects/musicar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head lang="pt-br">
-        <title>Musicar - Meus trabalhos com UX - Henrique Freitas</title>
+        <title>Musicar - My work with UX - Henrique Freitas</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <link rel="icon" href="../favicon.ico" type="image/x-icon">
@@ -40,10 +40,10 @@
 
                     <div class="collapse navbar-collapse" id="main-nav">
                         <ul class="nav navbar-nav" role="navigation">
-                            <li><a href="../index.html#about">Sobre mim</a></li>
-                            <li><a href="../index.html#skills">Conhecimentos</a></li>
-                            <li><a href="../index.html#testimonials">Depoimentos</a></li>
-                            <li><a href="../index.html#hire">Contratar</a></li>
+                            <li><a href="../index.html#about">About me</a></li>
+                            <li><a href="../index.html#skills">Knowledge</a></li>
+                            <li><a href="../index.html#testimonials">Testimonials</a></li>
+                            <li><a href="../index.html#hire">Hire</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right" role="navigation">
                             <li><a href="../portfolio.html">Portfolio</a></li>
@@ -62,18 +62,18 @@
                     </ol>
                     <hgroup>
                         <h1>Musicar</h1>
-                        <h2>O que é: um aplicativo que conecta professores, alunos e escolas de música com base em sua localização.</h2>
+                        <h2>What is it: a mobile application that connects music teachers and students based on their location.</h2>
                     </hgroup>
                 </header>
-                <p class="portfolio-item-description">O Musicar é um aplicativo que tem como missão facilitar o encontro entre quem ensina e quem quer aprender música e é o meu primeiro trabalho com UX. O aplicativo está sendo desenvolvido em parceria com uma multinacional do setor musical. Para validar a solução, foram criados um protótipo de baixa fidelidade e uma landing page de pré cadastro. O protótipo foi exibido em eventos com personas e a landing page foi apresentada na Expo Music 2016.</p>
+                <p class="portfolio-item-description">Musicar is a mobile application that makes it easy to connect music students and teachers who're seeking to schedule classes. This project was developed with the help of a multinational music company. To validate the solution, were developed a low fidelity prototype and a landing page to collect the emails from interested people. The solution was presented at Expo Music 2016.</p>
                 <div class="alert alert-success">
-                    <strong>Conquistas: </strong>
+                    <strong>Achievments: </strong>
                     <ul>
-                        <li>Entendimento das características e necessidades do cliente;</li>
+                        <li>Saved money by understanding that the customers wouldn't buy the solution without coding it;</li>
                     </ul>
                 </div>
                 <div class="alert alert-info">
-                    <strong>Design de interação: </strong><a href="https://invis.io/QP8KSQB5G" target="_blank">https://invis.io/QP8KSQB5G</a>
+                    <strong>Interaction design: </strong><a href="https://invis.io/QP8KSQB5G" target="_blank">https://invis.io/QP8KSQB5G</a>
                 </div>
                 <h3>Principais mockups</h3>
                 <div class="row">
@@ -88,7 +88,7 @@
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
                         <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/musicar/mockup/musicar_splash_screen.png">
                             <div>
-                                <img src="../assets/images/product/musicar/mockup/thumbnail/musicar_splash_screen.png" alt="Musicar App - Splash Screen" class="img-responsive img-thumbnail">
+                                <img src="../assets/images/product/musicar/mockup/thumbnail/musicar_splash_screen.png" alt="Musicar - Splash Screen" class="img-responsive img-thumbnail">
                             </div>
                             <strong>Splash Screen</strong>
                         </a>
@@ -96,47 +96,47 @@
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
                         <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/musicar/mockup/musicar_search.png">
                             <div>
-                                <img src="../assets/images/product/musicar/mockup/thumbnail/musicar_search.png" alt="Musicar App - Tela inicial" class="img-responsive img-thumbnail">
+                                <img src="../assets/images/product/musicar/mockup/thumbnail/musicar_search.png" alt="Musicar - Home screen | Musicar - Tela inicial" class="img-responsive img-thumbnail">
                             </div>
-                            <strong>Tela inicial</strong>
+                            <strong>Home screen</strong>
                         </a>
                     </div>
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
                         <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/musicar/mockup/musicar_filter_search.png">
                             <div>
-                                <img src="../assets/images/product/musicar/mockup/thumbnail/musicar_filter_search.png" alt="Musicar App - Busca por instrumentos musicais" class="img-responsive img-thumbnail">
+                                <img src="../assets/images/product/musicar/mockup/thumbnail/musicar_filter_search.png" alt="Musicar - Search for musical instruments | Musicar - Busca por instrumentos musicais" class="img-responsive img-thumbnail">
                             </div>
-                            <strong>Opções de busca</strong>
+                            <strong>Search options</strong>
                         </a>
                     </div>
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
                         <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/musicar/mockup/musicar_results.png">
                             <div>
-                                <img src="../assets/images/product/musicar/mockup/thumbnail/musicar_results.png" alt="Musicar App - Resultados da busca" class="img-responsive img-thumbnail">
+                                <img src="../assets/images/product/musicar/mockup/thumbnail/musicar_results.png" alt="Musicar - Search results | Musicar - Resultados da busca" class="img-responsive img-thumbnail">
                             </div>
-                            <strong>Resultados da busca</strong>
+                            <strong>Search results</strong>
                         </a>
                     </div>
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
                         <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/musicar/mockup/musicar_profile.png">
                             <div>
-                                <img src="../assets/images/product/musicar/mockup/thumbnail/musicar_profile.png" alt="Musicar App - Professor selecionado" class="img-responsive img-thumbnail">
+                                <img src="../assets/images/product/musicar/mockup/thumbnail/musicar_profile.png" alt="Musicar - selected teacher | Musicar - Professor selecionado" class="img-responsive img-thumbnail">
                             </div>
-                            <strong>Professor selecionado</strong>
+                            <strong>Selected teacher</strong>
                         </a>
                     </div>
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
                         <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/musicar/mockup/musicar_teacher_profile.png">
                             <div>
-                                <img src="../assets/images/product/musicar/mockup/thumbnail/musicar_teacher_profile.png" alt="Musicar  App - Detalhes do perfil" class="img-responsive img-thumbnail">
+                                <img src="../assets/images/product/musicar/mockup/thumbnail/musicar_teacher_profile.png" alt="Musicar - profile details | Musicar - Detalhes do perfil" class="img-responsive img-thumbnail">
                             </div>
-                            <strong>Detalhes do perfil</strong>
+                            <strong>Teacher profile details</strong>
                         </a>
                     </div>
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
                         <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/musicar/mockup/musicar_chat.png">
                             <div>
-                                <img src="../assets/images/product/musicar/mockup/thumbnail/musicar_chat.png" alt="Musicar App - Chat entre aluno e professor" class="img-responsive img-thumbnail">
+                                <img src="../assets/images/product/musicar/mockup/thumbnail/musicar_chat.png" alt="Musicar - Chat between student and teacher | Musicar - Chat entre aluno e professor" class="img-responsive img-thumbnail">
                             </div>
                             <strong>Chat</strong>
                         </a>
@@ -144,36 +144,36 @@
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
                         <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/musicar/mockup/musicar_chat_calendar.png">
                             <div>
-                                <img src="../assets/images/product/musicar/mockup/thumbnail/musicar_chat_calendar.png" alt="Musicar App - Calendário de agendamento de aula" class="img-responsive img-thumbnail">
+                                <img src="../assets/images/product/musicar/mockup/thumbnail/musicar_chat_calendar.png" alt="Musicar - Class schedule calendar | Musicar - Calendário de agendamento de aula" class="img-responsive img-thumbnail">
                             </div>
-                            <strong>Calendário de agendamento</strong>
+                            <strong>Schedule calendar</strong>
                         </a>
                     </div>
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
                         <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/musicar/mockup/musicar_chat_class_confirmed.png">
                             <div>
-                                <img src="../assets/images/product/musicar/mockup/thumbnail/musicar_chat_class_confirmed.png" alt="Musicar App - Aviso de aula agendada" class="img-responsive img-thumbnail">
+                                <img src="../assets/images/product/musicar/mockup/thumbnail/musicar_chat_class_confirmed.png" alt="Musicar - Scheduled class notification | Musicar - Aviso de aula agendada" class="img-responsive img-thumbnail">
                             </div>
-                            <strong>Agendamento de aula</strong>
+                            <strong>Scheduled class notification</strong>
                         </a>
                     </div>
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
                         <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/musicar/mockup/musicar_menu_profile.png">
                             <div>
-                                <img src="../assets/images/product/musicar/mockup/thumbnail/musicar_menu_profile.png" alt="Musicar App - Menu lateral de opções" class="img-responsive img-thumbnail">
+                                <img src="../assets/images/product/musicar/mockup/thumbnail/musicar_menu_profile.png" alt="Musicar - Sidebar | Musicar - Menu lateral" class="img-responsive img-thumbnail">
                             </div>
-                            <strong>Menu de opções</strong>
+                            <strong>Sidebar</strong>
                         </a>
                     </div>
                 </div>
             </section>
             <footer id="site-footer" class="section">
                 <div class="container">
-                    <strong><a href="../index.html" title="Voltar para a página inicial">Henrique Freitas</a></strong>
+                    <strong><a href="../index.html" title="Go to the home page">Henrique Freitas</a></strong>
                     <div class="footer-links">
-                        <a href="../index.html#hire">Me contrate</a>
-                        <a href="personal-website.html">Projeto Anterior &lt;&lt;</a>
-                        <a href="santander.html">Próximo projeto &gt;&gt;</a>
+                        <a href="../index.html#hire">Hire me</a>
+                        <a href="santander.html">Next project &gt;&gt;</a>
+                        <a href="personal-website.html">Previous project &lt;&lt;</a>
                     </div>
                     <div class="clearfix"></div>
                 </div>
